# cannonball_example

./: .gitignore  CMakeLists.txt  Makefile  README.rst
lib/: euler.cpp  euler.h  main.cpp
output/: results.csv
plot/: errors.py  trajectory.py
src/: cnl_types.cpp  main.cpp  std_types.cpp
